third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991a.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(f: |(u64, u64)|u64,g: |(u64, u64)|u64,h: |(u64, u64)|u64,i: |(u64, u64)|u64,x: u64,y: u64): u64 {
        Add<u64>(Add<u64>(Add<u64>((f)(x, y), (g)(x, y)), (h)(x, y)), (i)(x, y))
    }
    public fun test() {
        if Eq<u64>(Test::foo(closure#0Test::test$lambda$1(), closure#0Test::test$lambda$2(), closure#0Test::test$lambda$3(), closure#0Test::test$lambda$4(), 10, 100), 220) {
          Tuple()
        } else {
          Abort(0)
        };
        Tuple()
    }
    private fun test$lambda$1(x: u64,param$1: u64): u64 {
        {
          let _: u64 = param$1;
          x
        }
    }
    private fun test$lambda$2(param$0: u64,y: u64): u64 {
        {
          let _: u64 = param$0;
          y
        }
    }
    private fun test$lambda$3(a: u64,_b: u64): u64 {
        a
    }
    private fun test$lambda$4(_c: u64,d: u64): u64 {
        d
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(f: |(u64, u64)|u64, g: |(u64, u64)|u64, h: |(u64, u64)|u64, i: |(u64, u64)|u64, x: u64, y: u64): u64 {
        f(x, y) + g(x, y) + h(x, y) + i(x, y)
    }
    public fun test() {
        if (foo(|(arg0,arg1)| test$lambda$1(arg0, arg1), |(arg0,arg1)| test$lambda$2(arg0, arg1), |(arg0,arg1)| test$lambda$3(arg0, arg1), |(arg0,arg1)| test$lambda$4(arg0, arg1), 10, 100) == 220) () else abort 0;
    }
    fun test$lambda$1(x: u64, param$1: u64): u64 {
        let _ = param$1;
        x
    }
    fun test$lambda$2(param$0: u64, y: u64): u64 {
        let _ = param$0;
        y
    }
    fun test$lambda$3(a: u64, _b: u64): u64 {
        a
    }
    fun test$lambda$4(_c: u64, d: u64): u64 {
        d
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991a.move:6:13
  │
6 │             f(x, y) + g(x, y) + h(x, y) + i(x, y)
  │             ^^^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991a.move:6:23
  │
6 │             f(x, y) + g(x, y) + h(x, y) + i(x, y)
  │                       ^^^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991a.move:6:33
  │
6 │             f(x, y) + g(x, y) + h(x, y) + i(x, y)
  │                                 ^^^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991a.move:6:43
  │
6 │             f(x, y) + g(x, y) + h(x, y) + i(x, y)
  │                                           ^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/bug_10991a.move:10:21
   │
10 │         assert!(foo(|x, _| x, |_, y| y,
   │                     ^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/bug_10991a.move:10:31
   │
10 │         assert!(foo(|x, _| x, |_, y| y,
   │                               ^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/bug_10991a.move:11:6
   │
11 │         |a, _b| a, |_c, d| d,
   │         ^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/bug_10991a.move:11:17
   │
11 │         |a, _b| a, |_c, d| d,
   │                    ^^^^^^^^^
